// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useDatabaseQuery hook > applies query function to database 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Database: 11 tables",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseQuery hook > async query function on database 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Async DB: 11 tables",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseQuery hook > complex database query transformation 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "databaseType": "sqlite",
      "hasSettings": true,
      "tableCount": 11,
      "tableNames": [
        "settings",
        "modelConnection",
        "agentGraph",
        "messageThread",
        "metric",
        "message",
        "toolDefinition",
        "document",
        "chatSnapshot",
        "agentGraphExecution",
        "notebookCell",
      ],
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseQuery hook > database query processes actual database state changes 1`] = `
[
  {
    "data": null,
    "error": null,
    "hasResult": false,
    "loading": true,
    "operationPhase": "initial",
    "recordCount": 0,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "hasDefaultRecord": true,
      "queryTime": 1748759093300,
      "recordId": "settings::default",
      "recordTheme": "",
    },
    "error": null,
    "hasResult": true,
    "loading": false,
    "operationPhase": "initial",
    "recordCount": 0,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "hasDefaultRecord": true,
      "queryTime": 1748759093300,
      "recordId": "settings::default",
      "recordTheme": "",
    },
    "error": null,
    "hasResult": true,
    "loading": false,
    "operationPhase": "triggering-change",
    "recordCount": 1,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseQuery hook > manual refetch functionality 1`] = `
[
  {
    "data": null,
    "error": null,
    "hasRefetched": false,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Refetch test: 11 tables",
    "error": null,
    "hasRefetched": false,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Refetch test: 11 tables",
    "error": null,
    "hasRefetched": true,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Refetch test: 11 tables",
    "error": null,
    "hasRefetched": true,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseQuery hook > multiple database queries receive independent updates 1`] = `
[
  {
    "bothReady": false,
    "operationStep": 0,
    "query1HasData": false,
    "query1Loading": true,
    "query1Result": null,
    "query2HasData": false,
    "query2Loading": true,
    "query2Result": null,
  },
  {
    "bothReady": true,
    "operationStep": 0,
    "query1HasData": true,
    "query1Loading": false,
    "query1Result": "Query1: settings,modelConnection,agentGraph,messageThread,metric,message,toolDefinition,document,chatSnapshot,agentGraphExecution,notebookCell",
    "query2HasData": true,
    "query2Loading": false,
    "query2Result": "Query2: DB-object",
  },
  {
    "bothReady": true,
    "operationStep": 1,
    "query1HasData": true,
    "query1Loading": false,
    "query1Result": "Query1: settings,modelConnection,agentGraph,messageThread,metric,message,toolDefinition,document,chatSnapshot,agentGraphExecution,notebookCell",
    "query2HasData": true,
    "query2Loading": false,
    "query2Result": "Query2: DB-object",
  },
]
`;

exports[`useDatabaseQuery hook > query function changes dynamically 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
    "version": 1,
  },
  {
    "data": "v1-tables: 11",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
    "version": 1,
  },
  {
    "data": "v1-tables: 11",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
    "version": 2,
  },
]
`;

exports[`useDatabaseQuery hook > query function with database access 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Found settings: settings::default",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseQuery hook > subscription updates when database changes occur 1`] = `
[
  {
    "data": null,
    "error": null,
    "hasTriggeredChange": false,
    "latestResult": undefined,
    "loading": true,
    "queryResultsCount": 0,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "DB-Query: 11 tables at 1748759092778",
    "error": null,
    "hasTriggeredChange": false,
    "latestResult": undefined,
    "loading": false,
    "queryResultsCount": 0,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "DB-Query: 11 tables at 1748759092778",
    "error": null,
    "hasTriggeredChange": true,
    "latestResult": "DB-Query: 11 tables at 1748759092778",
    "loading": false,
    "queryResultsCount": 1,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseQuery hook > subscription updates with database processing 1`] = `
[
  {
    "data": null,
    "error": null,
    "hasSetData": false,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Processed DB: 11 tables",
    "error": null,
    "hasSetData": false,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Processed DB: 11 tables",
    "error": null,
    "hasSetData": true,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "manually-set-database-data",
    "error": null,
    "hasSetData": true,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;
